# no-epicycle

./: .gitignore  README.md  pyproject.toml  tests_reverse.py
.github/workflows/: publish.yml
eval/: benchmark.py  results.json
eval_results/: v0.1.2_10runs.txt  v0.1.2_5_7_26_with_abs_plateau_signal  v0.1_4_7_26  v0.1_4_7_26_only_loopable_tasks  v0.1_4_7_26_only_loopable_tasks_3_runs  v0.2_full_benchmark.txt  v0.2_full_benchmark_4_7_2026.txt
src/noepicycle/: __init__.py  cli.py  default_loop.py  executor.py  graph.py  ladder.py  nodes.py  state.py
