[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noepicycle"
version = "0.1.1"
description = "A LangGraph supervisor that prevents agentic coding loops from going in circles and burning tokens"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "anthropic>=0.25.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
noepicycle = "noepicycle.cli:app"
noepi = "noepicycle.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/noepicycle"]

[tool.ruff]
line-length = 88
target-version = "py311"